Fix overflow of too rage content, such as <code>

--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -62,6 +62,14 @@ a {
     box-sizing: border-box;
 }
 
+pre, code {
+    overflow: scroll;
+}
+
+.main {
+    flex: 1;
+}
+
 /* =================================================
 
                     STYLING
